<resources>
    <string name="app_name">dm</string>
    <string name="welcome_to">Welcome To</string>
    <string name="login">Login</string>
    <string name="for_doc">For Doctor</string>
    <string name="for_user">For User</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="reset_password">Reset Password ?</string>
    <string name="or">OR</string>
    <string name="don_t_have_account_lets">Don\'t Have Account Lets</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_line"><u>Sign Up</u></string>
    <string name="sign_in_line"><u>Sign In</u></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="collage">Collage</string>
    <string name="have_account_lets">Have Account Lets</string>
    <string name="let_s_go">Let\'s Go</string>
    <string name="new_analyzing">+ New Analyzing</string>
    <string name="logout">Logout</string>
    <string name="lan">العربية</string>
    <string name="previous_anal">Previous Analyzes</string>
    <string name="prof_sett">Profile Settings</string>
    <string name="contact_us">Contact Us</string>
    <string name="drawer_open">Menu opened</string>
    <string name="drawer_close">Menu closed</string>
    <string name="enter_these_fields">Enter These Fields</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="sugar_per">Sugar Per</string>
    <string name="ml_mg">ml/mg</string>
    <string name="is_there_a_pregnacy">Is There A Pregnacy?</string>
    <string name="pharmaceutical">Pharmaceutical</string>
    <string name="sugar_since">Sugar Since</string>
    <string name="complications">Complications</string>
    <string name="analyzing">Analyzing</string>
    <string name="insulin_dose">Insulin Dose</string>
    <string name="insulin_desc">Based On The Information You Entered ,We Recommend   Correcting The Insulin Dose To This Dose</string>
    <string name="speak_with_doctor">Speak With Doctor</string>
    <string name="info"><u>Info</u></string>
    <string name="name">Name</string>
    <string name="graduate_date">Graduate Date</string>
    <string name="date">Date</string>
    <string name="details">Details</string>
    <string name="analyze_date">Analyze Date</string>
    <string name="type_of_sugar">Type Of Sugar</string>
    <string name="messanger">Messanger</string>
    <string name="type_your_message">Type Your Message</string>
    <string name="help_center">Help Center</string>
    <string name="notifcation">Notifcation</string>
    <string name="vibration">Vibration</string>
    <string name="logged_in_successfully">Logged In Successfully...</string>
    <string name="user_val">Username is too short!</string>
    <string name="email_val">Email is too short!</string>
    <string name="password_val">Password is too short!</string>
    <string name="copassword_val">Password dont match!</string>
    <string name="collage_val">Collage is too short!</string>
    <string name="user_exsit">User Already Exist</string>
    <string name="user_not_found">User Not Found</string>
    <string name="loading_c">Loading...</string>
    <string name="saim">Saim</string>
    <string name="after_breakfast">After Breakfast</string>
    <string name="before_lunch">Before Lunch</string>
    <string name="after_lunch">After Lunch</string>
    <string name="before_dinner">Before Dinner</string>
    <string name="after_dinner">After Dinner</string>
    <string name="midnight">Midnight</string>
    <string name="next_day">Next Day</string>
    <string name="done">Done</string>
    <string name="send">send</string>
    <string name="new_password">New Password</string>
    <string name="re_enter_new_password">Re-Enter New Password</string>
    <string name="verfiy">Verfiy</string>
    <string name="user_exist">UserData already Exist!</string>
    <string name="insert_sugar_per">Please Insert Sugar Per!</string>
    <string name="insert_dose_one">Please Insert Dose One!</string>
    <string name="insert_dose_two">Please Insert Dose Two!</string>
    <string name="insert_dose_there">Please Insert Dose There!</string>
    <string name="insert_dose_four">Please Insert Dose Four!</string>
    <string name="insert_dose_five">Please Insert Dose Five!</string>
    <string name="pls_choose_insulin_type">Please choose insulin type!</string>
    <string name="pls_insert_all_data">Please insert all data!</string>
    <string name="insulin_type">Insulin Type</string>
    <string name="premixed">premixed</string>
    <string name="choose_insulin">Choose Insulin type</string>
    <string name="rapid">rapid</string>
    <string name="short_acting">short_acting</string>
    <string name="long_acting">long_acting</string>
    <string name="long_">long</string>
    <string name="nph">nph</string>
    <string name="basal">basal</string>
    <string name="long_short_acting">long &amp; short_acting</string>
    <string name="dose1">dose 1</string>
    <string name="dose_2">dose 2</string>
    <string name="dose_3">dose 3</string>
    <string name="dose_4">dose 4</string>
    <string name="dose_5">dose 5</string>
    <string name="day">day</string>
</resources>
