<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Scenario_signup.Scenario_for_doctor.for_doctor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <EditText
            android:id="@+id/username"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:background="@drawable/auth_user_input"
            android:hint="@string/username"
            android:paddingLeft="@dimen/_15sdp"/>
        <EditText
            android:id="@+id/useremail"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_18sdp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:inputType="textEmailAddress"
            android:background="@drawable/auth_user_input"
            android:hint="@string/email"
            android:paddingLeft="@dimen/_15sdp"/>
        <EditText
            android:id="@+id/password"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_18sdp"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:background="@drawable/auth_user_input"
            android:hint="@string/password"
            android:paddingLeft="@dimen/_15sdp"/>
        <EditText
            android:id="@+id/co_password"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_18sdp"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:background="@drawable/auth_user_input"
            android:hint="@string/confirm_password"
            android:paddingLeft="@dimen/_15sdp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/auth_button"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:text="@string/sign_up"
            android:id="@+id/signup"
            android:textSize="@dimen/_15sdp"
            android:textColor="@android:color/black"
            android:textAllCaps="false"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:text="@string/have_account_lets"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12sdp"
                android:id="@+id/signin"
                android:layout_marginLeft="@dimen/_3sdp"
                android:textColor="@color/f_color"
                android:text="@string/sign_in_line"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>