<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/auth_bg"
    tools:context=".Scenario_login.login">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:orientation="vertical">
<TextView
    android:layout_width="wrap_content"
    android:layout_height="@dimen/_70sdp"
    android:layout_marginTop="@dimen/_110sdp"
    android:text="@string/login"
    android:textSize="@dimen/_35sdp"
    android:textStyle="bold"
    android:textColor="@android:color/black"
    android:layout_gravity="center"/>
    <com.addisonelliott.segmentedbutton.SegmentedButtonGroup
        android:id="@+id/buttonGroup_lordOfTheRings"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="4dp"
        app:borderColor="@android:color/black"
        app:borderWidth="0dp"
        app:divider="@android:color/white"
        app:dividerWidth="7dp"
        app:position="0"
       >

        <com.addisonelliott.segmentedbutton.SegmentedButton
            android:layout_width="0dp"
            android:layout_height="@dimen/_50sdp"
            android:layout_weight="1"
            android:padding="10dp"
            app:drawable="@drawable/user"
            app:drawablePadding="@dimen/_5sdp"
            app:drawableGravity="left"
            android:background="@drawable/auth_bg_manual_left"
            app:selectedBackground="@drawable/auth_bg_selected_ledt"
            app:selectedTextColor="@android:color/black"
            app:text="@string/for_user"
            app:textSize="@dimen/_13sdp"
            app:textColor="@android:color/black"/>

        <com.addisonelliott.segmentedbutton.SegmentedButton
            android:layout_width="0dp"
            android:layout_height="@dimen/_50sdp"
            android:layout_weight="1"
            android:background="@drawable/auth_bg_manual"
            android:padding="10dp"
            app:drawableGravity="left"
            app:drawable="@drawable/doc_img"
            app:drawablePadding="@dimen/_5sdp"
            app:selectedBackground="@drawable/auth_bg_selected"
            app:selectedTextColor="@android:color/black"
            app:text="@string/for_doc"
            app:textSize="@dimen/_13sdp"
            app:textColor="@android:color/black" />

    </com.addisonelliott.segmentedbutton.SegmentedButtonGroup>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <EditText
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/auth_user_input"
                android:hint="@string/username"
                android:paddingLeft="@dimen/_15sdp"/>
            <EditText
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_18sdp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/auth_user_input"
                android:hint="@string/password"
                android:paddingLeft="@dimen/_15sdp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:background="@drawable/auth_button"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:text="@string/login"
                android:id="@+id/login"
                android:textSize="@dimen/_15sdp"
                android:textColor="@android:color/black"
                android:textAllCaps="false"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:textSize="@dimen/_12sdp"
                android:text="@string/forget_password"
                android:layout_marginLeft="@dimen/_10sdp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or"
                android:textStyle="bold"
                android:textSize="@dimen/_15sdp"
                android:layout_gravity="center"
                android:textColor="@android:color/black"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_12sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:text="@string/don_t_have_account_lets"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_12sdp"
                    android:layout_marginLeft="@dimen/_3sdp"
                    android:textColor="@color/f_color"
                    android:id="@+id/signup"
                    android:text="@string/sign_up_line"/>
            </LinearLayout>
        </LinearLayout>

</LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>