<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main_Screen.Scenario_result.result">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:orientation="vertical">
    <TextView
        android:layout_weight=".12"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/insulin_dose"
        android:textSize="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:layout_marginLeft="@dimen/_5sdp"/>

        <TextView
            android:layout_weight=".15"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:paddingLeft="@dimen/_5sdp"
            android:text="@string/insulin_desc"
            android:textSize="@dimen/_11sdp"
            />
        <LinearLayout
            android:layout_weight=".62"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:layout_width="@dimen/_140sdp"
                android:layout_height="@dimen/_140sdp"
                android:backgroundTint="@color/f_color"
                android:text="2/m"
                android:textSize="@dimen/_35sdp"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:background="@drawable/analize"/>
        </LinearLayout>
        <Button
            android:layout_weight=".12"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/lets_go_btn"
            android:textAllCaps="false"
            android:text="@string/speak_with_doctor"
            android:textSize="@dimen/_14sdp"
            android:id="@+id/speak_with_doc"
            android:textColor="@android:color/black"
            android:layout_marginLeft="@dimen/_30sdp"
            android:layout_marginRight="@dimen/_30sdp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/_40sdp"
            />

    </LinearLayout>

</FrameLayout>