<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/analyze_date"
        android:textSize="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:layout_marginLeft="@dimen/_5sdp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:weightSum="1"
        android:orientation="horizontal">
        <TextView
            android:textColor="@color/t_color"
            android:layout_width="0dp"
            android:layout_weight=".8"
            android:text="@string/type_of_sugar"
            android:textStyle="bold"
            android:gravity="center|left"
            android:paddingLeft="@dimen/_10sdp"
            android:textSize="@dimen/_14sdp"
            android:layout_height="match_parent"/>
        <TextView
            android:layout_weight=".13"
            android:background="@drawable/lets_go_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textStyle="bold"
            android:text="1"
            android:gravity="center"
            android:textSize="@dimen/_13sdp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:weightSum="1"
        android:orientation="horizontal">
        <TextView
            android:textColor="@color/t_color"
            android:layout_width="0dp"
            android:layout_weight=".8"
            android:text="@string/is_there_a_pregnacy"
            android:textStyle="bold"
            android:gravity="center|left"
            android:paddingLeft="@dimen/_10sdp"
            android:textSize="@dimen/_14sdp"
            android:layout_height="match_parent"/>
        <TextView
            android:layout_weight=".13"
            android:background="@drawable/lets_go_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textStyle="bold"
            android:text="Yes"
            android:gravity="center"
            android:textSize="@dimen/_13sdp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:weightSum="1"
        android:orientation="horizontal">
        <TextView
            android:textColor="@color/t_color"
            android:layout_width="0dp"
            android:layout_weight=".8"
            android:text="@string/pharmaceutical"
            android:textStyle="bold"
            android:gravity="center|left"
            android:paddingLeft="@dimen/_10sdp"
            android:textSize="@dimen/_14sdp"
            android:layout_height="match_parent"/>
        <ImageView
            android:layout_weight=".13"
            android:background="@drawable/lets_go_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textStyle="bold"
            android:src="@drawable/vaccine"
            android:tint="@android:color/black"
            android:padding="@dimen/_8sdp"
            android:gravity="center"
            android:textSize="@dimen/_13sdp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:weightSum="1"
        android:orientation="horizontal">
        <TextView
            android:textColor="@color/t_color"
            android:layout_width="0dp"
            android:layout_weight=".8"
            android:text="@string/sugar_since"
            android:textStyle="bold"
            android:gravity="center|left"
            android:paddingLeft="@dimen/_10sdp"
            android:textSize="@dimen/_14sdp"
            android:layout_height="match_parent"/>
        <TextView
            android:layout_weight=".13"
            android:background="@drawable/lets_go_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textStyle="bold"
            android:text="1-\nyear"
            android:tint="@android:color/black"
            android:padding="@dimen/_8sdp"
            android:gravity="center"
            android:textSize="@dimen/_11sdp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:weightSum="1"
        android:orientation="horizontal">
        <TextView
            android:textColor="@color/t_color"
            android:layout_width="0dp"
            android:layout_weight=".8"
            android:text="@string/complications"
            android:textStyle="bold"
            android:gravity="center|left"
            android:paddingLeft="@dimen/_10sdp"
            android:textSize="@dimen/_14sdp"
            android:layout_height="match_parent"/>
        <ImageView
            android:layout_weight=".13"
            android:background="@drawable/lets_go_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textStyle="bold"
            android:src="@drawable/eye"
            android:tint="@android:color/black"
            android:padding="@dimen/_8sdp"
            android:gravity="center"
            android:textSize="@dimen/_11sdp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:weightSum="1"
        android:layout_marginBottom="@dimen/_10sdp"
        android:orientation="horizontal">
        <TextView
            android:textColor="@color/t_color"
            android:layout_width="0dp"
            android:layout_weight=".6"
            android:text="@string/sugar_per"
            android:textStyle="bold"
            android:gravity="center|left"
            android:paddingLeft="@dimen/_10sdp"
            android:textSize="@dimen/_14sdp"
            android:layout_height="match_parent"/>
        <TextView
            android:layout_weight=".33"
            android:background="@drawable/lets_go_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textStyle="bold"
            android:text="95 ml/mg"
            android:src="@drawable/eye"
            android:tint="@android:color/black"
            android:padding="@dimen/_8sdp"
            android:gravity="center"
            android:textSize="@dimen/_13sdp"/>
    </LinearLayout>
        <ImageView
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_70sdp"
            android:src="@drawable/points"
            android:layout_gravity="right"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_marginRight="-40dp"
            />
    </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</RelativeLayout>