<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/forget_pass"
    android:gravity="center|top"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context=".Scenario_forget_password.controller.forget_password">

    <ImageView
        android:layout_width="@dimen/_150sdp"
        android:layout_height="0dp"
        android:layout_weight=".35"
        android:background="@drawable/forget_pass_bg"
        android:padding="@dimen/_40sdp"
        android:src="@drawable/lock" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight=".3"
            android:gravity="center"
            android:text="@string/forget_password"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_20sdp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="@dimen/_30sdp"
            android:layout_marginRight="@dimen/_30sdp"
            android:layout_weight=".65"
            app:cardCornerRadius="@dimen/_15sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingRight="@dimen/_10sdp">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_marginRight="@dimen/_15sdp"
                    android:hint="@string/email" />

                <Button
                    android:id="@+id/send_mail"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginRight="@dimen/_15sdp"
                    android:background="@drawable/lets_go_btn"
                    android:text="@string/send"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_14sdp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</LinearLayout>